# i18n-example

./: Cargo.toml  i18n.toml
i18n/ja-JP/: rust.ftl
i18n/locales/ja-JP/: main.ftl  main2.ftl  rust.ftl
src/: __main.rs  _main.rs  i18n.rs  main.rs
